aligned format with homepage

--- a/random.html
+++ b/random.html
@@ -6,10 +6,10 @@
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Sen Gupta | Sourav</title>
-    <meta name="description" content="Official website of Sourav Sen Gupta">
-    <meta name="author" content="Sourav Sen Gupta">
-    <meta name="keywords" content="Sourav Sen Gupta, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
+    <title>Sengupta | Sourav</title>
+    <meta name="description" content="Official website of Sourav Sengupta">
+    <meta name="author" content="Sourav Sengupta">
+    <meta name="keywords" content="Sourav Sen Gupta, Sourav Sengupta, Computer Architecture, Cryptography, Privacy, Blockchain, Mathematics, Data Science, Machine Learning">
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -41,32 +41,31 @@
     <div class="container">
         <div class="row">
             <div class="three columns homepage" style="margin-top: 5%">
-                <a class="nav-link" href="index.html">Sourav SEN GUPTA</a>
+                <a class="nav-link active" href="index.html">Sourav Sengupta</a>
             </div>
             <div class="nine columns collapse" style="margin-top: 5%">
-                <div class="nav">
+                <!-- <div class="nav">
                     <ul class="nav-list">
                         <li class="nav-item"><a class="nav-link" href="teaching.html">teaching</a></li>
                         <li class="nav-item"><a class="nav-link" href="research.html">research</a></li>
                         <li class="nav-item"><a class="nav-link" href="activities.html">activities</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="random.html">random</a></li>
+                        <li class="nav-item"><a class="nav-link" href="random.html">random</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="row">
-            <div class="three columns collapse" style="margin-top: 5%">
+            <div class="three columns homepage" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <p><strong>Lecturer</strong>, School of Computer Science and Engineering</p>
-                <p>Nanyang Technological University, 50 Nanyang Avenue, Singapore 639798</p>
-                <p>Office : N4-02b-45<br />
-                    Phone : +65 6790 4587<br />
-                    <strong>sg.sourav@ntu.edu.sg</strong></p>
+                <p><strong>Principal Member of Technical Staff</strong> and <strong>R&D Team Leader (CoMPASS)</strong>, Compute System Architecture</p>
+                <p>imec, Kapeldreef 75<br />
+                    3001 Leuven, Belgium</p>
+                <p>Sourav.Sengupta@imec.be</p>
                 <h4>
                     <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/sgsourav" target="_blank"><i class="fab fa-github-square"></i></a>
-                    <a href="https://dblp.uni-trier.de/pers/hd/g/Gupta:Sourav_Sen" target="_blank"><i class="ai ai-dblp-square"></i></a>
+                    <a href="https://dblp.org/pid/41/8030.html" target="_blank"><i class="ai ai-dblp-square"></i></a>
                     <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i></a>
                     <a href="https://orcid.org/0000-0002-4197-582X" target="_blank"><i class="ai ai-orcid-square"></i></a>
                 </h4>
