updated affiliation for 2024

--- a/activities.html
+++ b/activities.html
@@ -58,7 +58,7 @@
             <div class="three columns homepage" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <p><strong>Principal Member of Technical Staff</strong> and <strong>R&D Team Leader (CoMPASS)</strong>, Compute System Architecture</p>
+                <p><strong>Principal Member of Technical Staff</strong> and <strong>R&D Team Leader</strong> (CSA > CMA)</p>
                 <p>imec, Kapeldreef 75<br />
                     3001 Leuven, Belgium</p>
                 <p>Sourav.Sengupta@imec.be</p>
