--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="three columns homepage" style="margin-top: 5%">
                 <img class="profile" src="images/sourav_profile.png">
                 <p> </p>
-                <p><strong>Principal Member of Technical Staff</strong> and <strong>R&D Team Leader (CoMPASS)</strong>, Compute System Architecture</p>
+                <p><strong>Principal Member of Technical Staff</strong> and <strong>R&D Team Leader</strong> (CSA > CMA)</p>
                 <p>imec, Kapeldreef 75<br />
                     3001 Leuven, Belgium</p>
                 <p>Sourav.Sengupta@imec.be</p>
@@ -75,7 +75,7 @@
                 <p class="lead">My current research area revolves around designing efficient and scalable micro-architecture for next-generation High-Performance Computing and Artificial Intelligence. In my previous (academic) life, I took an active interest in studying the &quot;science of security&quot; (primarily focused on cryptology), while teaching the &quot;art of analytics&quot; (broadly dealing with data science).</p> 
                 <p class="lead">I truly enjoy learning new things and exploring new technical domains. Essentially, I remain an ardent student of Mathematics and Computing.</p>
 
-                <blockquote>I will be glad to share my CV, with further details, if you are interested. You may also check out my professional profile on <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i
+                <blockquote>I will be glad to share my CV, with further details, if you are interested. You may also check out my profile on <a href="https://sg.linkedin.com/in/sg-sourav" target="_blank"><i
                             class="fab fa-linkedin"></i> LinkedIn</a> and my publications on <a href="https://dblp.org/pid/41/8030.html" target="_blank"><i class="ai ai-dblp-square"></i> dblp</a> or <a href="https://scholar.google.com/citations?user=I8gZp-gAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square"></i> google scholar</a>.</blockquote>
 
                 <hr />
@@ -83,8 +83,9 @@
                 <h5>Professional Experience</h5>
 
                 <ul>
+                    <li>Since Jul 2024 : R&D Team Leader -- CMA, CSA, DSRD, <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
                     <li>Since Dec 2023 : Principal Member of Technical Staff -- CSA, <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
-                    <li>Since Apr 2023 : R&D Team Leader -- CoMPASS, FuSE, CSA, <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
+                    <li>Apr 2023 - Jun 2024 : R&D Team Leader -- CoMPASS, FuSE, CSA, <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
                     <li>2022-2023 : Researcher -- Compute System Architecture (CSA), <a href="https://www.imec-int.com/en" target="_blank">imec Leuven, Belgium</a></li>
                     <li>2018-2022 : Lecturer -- <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering, NTU Singapore</a></li>
                     <li>May-Dec 2017 : Visiting Lecturer -- <a href="http://www.isical.ac.in/~rcbose" target="_blank">R C Bose Centre, Indian Statistical Institute</a></li>
